# freeswitch

./: configure.ac
libs/esl/: Makefile.am
libs/esl/python/: Makefile  python-config
src/: switch_core_media.c  switch_core_sqldb.c  switch_ivr_play_say.c
src/mod/applications/mod_http_cache/: Makefile.am
src/mod/applications/mod_test/: Makefile.am
src/mod/endpoints/mod_sofia/: mod_sofia.c
src/mod/event_handlers/mod_kazoo/: kazoo_commands.c
src/mod/event_handlers/mod_rayo/: Makefile.am
src/mod/languages/mod_lua/: Makefile.am
src/mod/say/mod_say_ja/: mod_say_ja.c
